--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="landing-page" class="landing">
         <div class="content">
             <h1>Hello, I'm Fadhel Adrian Hakim</h1>
-            <p>Let's Go</p>
+            <p>Welcomee...</p>
             <a href="#portfolio" class="btn btn-outline-danger">View Portfolio</a>
         </div>
     </section>
@@ -39,9 +39,10 @@
 <section id="about" class="about">
     <h2>About Me</h2>
     <div class="about-content">
-        <img src="image/padel.jpg" alt="Your Photo" class="profile-photo">
+        <img src="image/biofadhel.jpeg" alt="Your Photo" class="profile-photo">
         <div class="bio">
-            <p><strong>Bio:</strong> Aku Mah Keren.</p>
+            <p><strong>Bio:</strong> Halo saya Fadhel Adrian Hakim, saya saat ini mempelajari Computer Science di Binus University.
+            Tidak hanya itu saya juga mempelajari Digital Business sebagai pembelajaran minor saya di Binus University.</p>
         </div>
     </div>
 </section>
@@ -67,12 +68,13 @@
                 <button class="slider-button" onclick="nextSlide(1)">Next</button>
             </div>
         </div>
-        <p>The website is about a list of employees joined with the job position table.
-            There is also a feature to add employees below the table using JavaScript. 
-            Employees can also be added using a provided Excel format, and there is an export feature available in Excel, PDF, and CSV formats.
-            The website is built using the Laravel framework.
+        <p> Project ini adalah tentang mendeteksi virus Covid-19 dengan menggunakan image, 
+            project ini melakukan test kepada 3 model deep learnig yaitu ResNet50, VGG16, dan VGG19.
+            Semua model deep learning yang disebutkan akan di test mulai dari precision,recall,F1-Score,sampai supportnya
+            yang akan dinilai mana total accuracy yang paling tinggi dan model apa yang paling efektif.
+
         </p>
-        <a href="https://github.com/ivanratana/project_karyawan" class="text-black">github</a>
+        <a href="https://github.com/fadhel-hakim/codebio" class="text-black">github</a>
     </div>
         
     <!-- project2 -->
@@ -93,11 +95,9 @@
                 <button class="slider-button" onclick="nextSlide(2)">Next</button>
             </div>
         </div>
-        <p>The methods that were used as state of the art is custom CNN models
-            consist multiple convolutional layers followed by pooling layers, dropout layers for
-            regularization, and fully connected layers for classification.
+        <p>
         </p>
-        <a href="https://github.com/ivanratana/CNN_BrainTumourPrediction" class="text-black">github</a>
+        <a href="" class="text-black">github</a>
     </div>
 </div>
     
